2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2
	
2009-03-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Automatically build all test programs (but don't
	install them).
	(EXTRA_DIST): Added cloop.music.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* events.music: Removed absolute paths from binaries.

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Don't install waveproducer/waveconsumer example.

2009-03-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* constsource.cc (main): Initialize loop variable i.

	* contdelay.cc (getargs): Use atof instead of atoi for option -d.

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0
	
2009-02-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Log time of event as well as time of reception.

2009-02-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Added options --acclatency and --maxbuffered.

2008-12-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Switch to CamelCase.
	
2008-11-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Print error message if port width not specified.

2008-11-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc, events.music: Input port renamed from "eventlog"
	to "in".

2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Added better argument handling, including
	options; Bugfix: Don't pass pointers to automatic event handlers
	to map.

	* events.music: Removed index map type argument (which is now an
	option).

2008-10-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Check that port is connected before mapping it.

2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Updated to use global_index.

2008-02-01  Mikael Djurfeldt  <mikael@djurfeldt.com>
