@@ -1,3 +1,13 @@
+2009-03-14  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* messagesource.cc, messages.music, messages0.dat, messages1.dat:
+	New files.
+
+	* Makefile.am (noinst_PROGRAMS): Added messagesource.
+	(EXTRA_DIST): Added messages.music.
+
+	* eventlogger.cc: Added support for messages.
+
 2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0.3
